--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ tagline:             내일의 나는 분명히 까먹는다
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
 description:         >
-  # 프로필 사진 밑 한마디
+  후회없게
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
@@ -26,7 +26,7 @@ author:
   email:             xoghk0321@gmail.com
 
 # Fallback image and color
-image:               /assets/img/ryan.jpg
+image:               /assets/img/ryan.png
 color:               '#4f86aa'
 
 # The font used for headings. Expects a string that is a valid CSS font-family value.
@@ -47,10 +47,10 @@ google_fonts:        Lato
 google_analytics:    UA-92346434-1
 
 # Setting a disqus shortname will enable the comment section on pages with `comments: true` in the front matter
-disqus_shortname:    isme2n
+disqus_shortname:    sky7th
 
 # This text will appear in the footer of every page. Markdown enabled.
-copyright:           '&copy; 2017. by isme2n'
+copyright:           '&copy; 2019. by sky7th'
 
 # Format of the permalinks
 permalink:           pretty
