--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ tagline:             내일의 나는 분명히 까먹는다
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
 description:         >
-  후회없게
+  내일의 내가 오늘을 후회하지 않게.
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
